fix: overflow

--- a/src/components/markdown-preview/index.module.scss
+++ b/src/components/markdown-preview/index.module.scss
@@ -28,5 +28,6 @@
     display: inline-block;
     max-width: 100%;
     overflow: auto;
+    vertical-align: middle;
   }
 }
